[project]
name = "image-transmuter"
version = "0.1.0"
description = ""
authors = [
    {name = "IJMadalenA"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "poetry (>=2.0.1,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
